--- a/leetcode/pom.xml
+++ b/leetcode/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>3.15</version>
+            <version>3.6</version>
         </dependency>
         <!--poi end-->
         <dependency>
@@ -46,6 +46,11 @@
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis-ext</artifactId>
             <version>1.3.04</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.8</version>
         </dependency>
         <!-- svg 生成png格式图片结束  -->
     </dependencies>
