--- a/antlr/pom.xml
+++ b/antlr/pom.xml
@@ -18,7 +18,10 @@
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+            <version>4.5.3</version>
+        </dependency>
     </dependencies>
-
-
 </project>
