--- a/antlr/pom.xml
+++ b/antlr/pom.xml
@@ -7,6 +7,15 @@
     <groupId>groupId</groupId>
     <artifactId>antlr</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <antlr.version>4.5.3</antlr.version>
+        <java.source>1.8</java.source>
+        <java.target>1.8</java.target>
+        <sourceEncoding>UTF-8</sourceEncoding>
+    </properties>
+
+
     <dependencies>
         <dependency>
             <groupId>commons-io</groupId>
@@ -21,7 +30,8 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
-            <version>4.5.3</version>
+            <version>${antlr.version}</version>
         </dependency>
     </dependencies>
+
 </project>
