--- a/leetcode/pom.xml
+++ b/leetcode/pom.xml
@@ -65,6 +65,19 @@
             <artifactId>jbrowserdriver</artifactId>
             <version>0.17.0</version>
         </dependency>
+        <!--jxl导入图片-->
+        <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.35</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
